--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-    <title>simple-todos-svelte</title>
+    <title>Flow Notes</title>
 
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
